attempted fix for hover problems on mobile

--- a/src/components/HomePage/Section3/section3.module.css
+++ b/src/components/HomePage/Section3/section3.module.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Righteous&display=swap");
+
 .section3 {
   padding: 10px;
   font-size: 30px;
@@ -11,12 +12,14 @@
   text-align: center;
   color: #000;
 }
+
 .portfolioh3tag {
   font-family: "Permanent Marker", cursive;
   text-align: center;
   color: #000;
   font-size: 35px;
 }
+
 .btn {
   color: #fff;
   padding: 10px 20px;
@@ -26,11 +29,13 @@
   border: 1px solid #cf6d17;
   background-color: #cf6d17;
 }
+
 .main {
   margin: 20px 1.6%;
   overflow: hidden;
   position: relative;
 }
+
 .main .section3Img {
   -o-object-fit: cover;
   object-fit: cover;
@@ -41,10 +46,12 @@
   height: 100%;
   width: 90%;
 }
+
 .main:hover img {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
+
 .show {
   background-color: #cf6d17;
   display: -webkit-box;
@@ -70,18 +77,30 @@
   width: 100%;
   height: 100%;
 }
+
 .main:hover .show {
   opacity: 1;
 }
+
 .btn:hover {
   color: #000;
   border: 1px solid #fff;
   background-color: #fff;
 }
+
 @media only screen and (max-width: 850px) {
   .section3 {
     font-family: "Righteous", cursive;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+  }
+
+  .main:focus .show {
+    opacity: 1;
+  }
+
+  .main:focus img {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
   }
 }
